<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:textSize="24sp"/>

    <RadioGroup
            android:id="@+id/radioGrp_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp">


        <RadioButton
                android:id="@+id/radioButton_thumbsUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thumbs_up"
                android:button="@drawable/thumb_up_selector"
                android:layout_margin="10dp"/>

        <RadioButton
                android:id="@+id/radioButton_thumbsDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thumbs_down"
                android:button="@drawable/thumb_down_selector"
                android:layout_margin="10dp"/>


    </RadioGroup>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">


        <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.ButtonBar.AlertDialog"/>

        <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_margin="10dp"
                style="@style/Widget.AppCompat.ButtonBar.AlertDialog"/>
    </LinearLayout>

</LinearLayout>