<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="mainView"
                  type="com.sinue.streetworkout.urbandictionary.view.MainActivity"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity">

        <TextView
                android:id="@+id/txtWelcome1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
                android:id="@+id/txtWelcome2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_search"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/txtWelcome1"/>

        <TextView
                android:id="@+id/txt_searchedWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{ mainView.termToSearch }"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/txtWelcome2"/>

        <EditText
                android:id="@+id/editTxt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_searchedWord"
                android:hint="@string/query_hint"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/imageButton_sort">

        </EditText>

        <ImageButton
                android:id="@+id/imageButton_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_thumbs_up_down_impact"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_searchedWord"
                android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView_search"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/txtSource"
                android:focusable="false"
                android:background="@color/colorLight"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editTxt_search"/>

        <TextView
                android:id="@+id/txtSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:text="@string/search_source"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
