...
                    android:layout_weight="2"
                    android:columnCount="2"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorLight">

            <TextView android:text="2"
                      android:id="@+id/txtThumbUp"
                      android:layout_margin="5dp"
                      android:layout_gravity="center"/>
            <ImageView
                    android:src="@drawable/ic_thumb_up_impact"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"/>
...
